--- a/app/views/auth/emails/qts-email.html
+++ b/app/views/auth/emails/qts-email.html
@@ -6,7 +6,7 @@
 {% block content %}
   <p>Dear {{ data.emailName or 'Jane Smith' }},</p>
   <h1 class="govuk-heading-m">Congratulations on being awarded qualified teacher status (QTS)</h1>
-  <p>The Teaching Regulation Agency (TRA) has awarded you qualified teacher status (QTS).</p>
+  <p>The Teaching Regulation Agency (TRA) has awarded you qualified teacher status (QTS). The TRA is responsible for the regulation of the teaching profession in England and is sponsored by the Department for Education (DfE).</p>
 
 
   <h2 class="govuk-heading-s">Get your QTS certificate</h2>
