Updates for new names flow, swap to smart quotes

--- a/app/views/account/_alerts.html
+++ b/app/views/account/_alerts.html
@@ -29,7 +29,7 @@
 <h3 class="govuk-notification-banner__heading">
   Confirm your correct date of birth
 </h3>
-<p class="govuk-body">We've got two different dates of birth for you. The one you entered when you created your DfE Identity account is different to the one already in our records. Change the incorrect date of birth.</p>
+<p class="govuk-body">We’ve got two different dates of birth for you. The one you entered when you created your DfE Identity account is different to the one already in our records. Change the incorrect date of birth.</p>
 
 {% endset %}
 
