--- a/app/views/account/_summary-card.html
+++ b/app/views/account/_summary-card.html
@@ -40,7 +40,7 @@
       html: 'Name'
     },
     value: {
-      html: data['fullName'] | title if data['firstName'] else 'Ria Smith'
+      html: data['fullName'] if data['firstName'] else 'Ria Smith'
     },
     actions: {
       items: [{
@@ -119,7 +119,7 @@
       html: 'Email'
     },
     value: {
-      html: data['email'] | title if data['email'] else 'email@example.com'
+      html: data['email'] if data['email'] else 'email@example.com'
 
     },
     actions: {
@@ -134,7 +134,7 @@
       html: 'Mobile number'
     },
     value: {
-      html: data['phone'] | title if data['phone'] else '07827999617'
+      html: data['phone'] if data['phone'] else '07827999617'
 
     },
     actions: {
@@ -158,7 +158,7 @@
       html: 'TRN'
     },
     value: {
-      html: data['trn'] | title if data['trn'] else '1851018'
+      html: data['trn'] if data['trn'] else '1851018'
 
     }
   }
