--- a/app/views/account/dob-dqt-overview.html
+++ b/app/views/account/dob-dqt-overview.html
@@ -7,6 +7,6 @@
 {% block form %}
 <p>If the date of birth in our records is wrong, you’ll need to provide evidence to update it.</p>
 
-<p>We'll give you detailed information about providing evidence . Changes can take up to 5 working days.</p>
+<p>We’ll give you detailed information about providing evidence . Changes can take up to 5 working days.</p>
 
 {% endblock %}
