--- a/app/views/account/email.html
+++ b/app/views/account/email.html
@@ -1,6 +1,6 @@
 {% extends "layouts/forms.html" %}
 {% set title %}Your email address{% endset %}
-{% set emailHint %}We'll use this to send you a code to confirm your email address. Do not use a work or university email that you might lose access to.{% endset %}
+{% set emailHint %}We’ll use this to send you a code to confirm your email address. Do not use a work or university email that you might lose access to.{% endset %}
 {% set email = 'email@example.com' %}
 {% set signedIn = 'true' %}
 {% set account  = 'true' %}
