--- a/app/views/account/name-dqt-overview.html
+++ b/app/views/account/name-dqt-overview.html
@@ -7,9 +7,9 @@
 {% block form %}
 <p>If you’ve changed your name, you’ll need to provide evidence to update it.</p>
 
-<p>We'll give you detailed information about providing evidence. Changes can take up to 5 working days.</p>
+<p>We’ll give you detailed information about providing evidence. Changes can take up to 5 working days.</p>
 
-<p>We'll email you to confirm that we've made the changes.</p>
+<p>We’ll email you to confirm that we’ve made the changes.</p>
 
 
 {% endblock %}
