--- a/app/views/auth/emails/qts-email.html
+++ b/app/views/auth/emails/qts-email.html
@@ -18,7 +18,7 @@
   <p>Get your certificate In the Access your teaching qualifications service. You’ll need to create a  {{ data.tsa }} to sign in.</p>
 
 
-  <p> <a href='/user-research/qual/email'>www.access-your-teaching-qualifications.education.gov.uk</a></p>
+  <p> <a href='/user-research/qual/email'>www.access-your-teaching-qualifications.education.gov.uk?invite=1b49c83e-e7bc-479d-8dd7-b55a28206c7d</a></p>
   {{ govukInsetText({
     text: "Use this link if you need to return to this service in the future."
   }) }}
