--- a/app/views/layouts/forms.html
+++ b/app/views/layouts/forms.html
@@ -27,10 +27,10 @@
       }) if data['errorMessage'] == 'true' }} 
     
       {% if showSubheader %}
-         <span class="govuk-caption-xl">{{subHeader}}</span>
+         <span class="govuk-caption-l">{{subHeader}}</span>
        {% endif %}
        {% if not showheader %}
-        <h1 class="govuk-heading-xl">{{ title | safe }}</h1>
+        <h1 class="govuk-heading-l">{{ title | safe }}</h1>
        {% endif %}
 
 
