--- a/app/views/qts/eligibility/eligible.html
+++ b/app/views/qts/eligibility/eligible.html
@@ -20,7 +20,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
 		<h2 class="govuk-heading-m">Preparing to apply</h2>
 		<p class="govuk-body">
-			If you decide to apply, you'll need to provide a range of evidence. We'll ask you to upload some scans,
+			If you decide to apply, you’ll need to provide a range of evidence. We’ll ask you to upload some scans,
 			photos, or original files.
 		</p>
 
@@ -296,7 +296,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 		</div>
 
 		<h2 class="govuk-heading-m">Before you apply</h2>
-		<p class="govuk-body">You'll need to create a  {{ data.tsa }}. It will only take a few minutes.</p>
+		<p class="govuk-body">You’ll need to create a  {{ data.tsa }}. It will only take a few minutes.</p>
 
 		<a role="button" draggable="false" data-module="govuk-button" class="govuk-button govuk-button--start"
 		   href="/auth/ga-account">Create an account
