--- a/app/views/qts/eligibility/old/eligible-bucket-3.html
+++ b/app/views/qts/eligibility/old/eligible-bucket-3.html
@@ -15,7 +15,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">What you'll need before applying for QTS</h1>
+        <h1 class="govuk-heading-xl">What you’ll need before applying for QTS</h1>
 
         <!-- Start of accordion -->
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
@@ -59,7 +59,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
                     <p class="govuk-body"><a
                             href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels">Check you hold a qualification that is equivalent or higher than a level 6</a>.</p>
 
-                    <p class="govuk-body">We'll need to understand how much of your qualification was focussed on developing practical teaching skills.</p>
+                    <p class="govuk-body">We’ll need to understand how much of your qualification was focussed on developing practical teaching skills.</p>
 
                     <p class="govuk-body">You’ll need to provide evidence of your teaching qualification:</p>
 
@@ -286,7 +286,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
         <p class="govuk-body">If you'd like to help, please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjsMHqaiNP2cUUpmbeOkHRM96afrsj1TmTIEs-k4yit0JqBA/viewform"
                 rel="noreferrer noopener" target="_blank">complete this form</a>.</p>
-        <p class="govuk-body">If you match our search criteria, we'll invite you to take part in research.</p>
+        <p class="govuk-body">If you match our search criteria, we’ll invite you to take part in research.</p>
 
     </div>
 </div>
