--- a/app/views/qts/eligibility/old/eligible.html
+++ b/app/views/qts/eligibility/old/eligible.html
@@ -18,7 +18,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
 		<h2 class="govuk-heading-m">You can prepare to apply now</h2>
 		<p class="govuk-body">
-			If you decide to apply, you'll need to provide a range of evidence. We'll ask you
+			If you decide to apply, you’ll need to provide a range of evidence. We’ll ask you
 			to upload some scans, photos, or original files, so it's useful to get these now.
 		</p>
 
@@ -56,7 +56,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 		<p class="govuk-body">The authority or territory that recognises you as a teacher must confirm:</p>
 
 		<ul class="govuk-list govuk-list--bullet">
-			<li>that you've completed a teaching qualification/teacher training</li>
+			<li>that you’ve completed a teaching qualification/teacher training</li>
 			<li>that you’ve successfully completed any period of professional experience comparable to an induction
 				period (if required)
 			</li>
