--- a/app/views/qts/eligibility/old/ignore-question-sen-only.html
+++ b/app/views/qts/eligibility/old/ignore-question-sen-only.html
@@ -31,7 +31,7 @@ Question page template – {{ serviceName }} – GOV.UK Prototype Kit
 			}
 			},
 			hint: {
-			text: "To apply for QTS using this service you'll need a qualification to teach all children, not just those
+			text: "To apply for QTS using this service you’ll need a qualification to teach all children, not just those
 			with special needs."
 			},
 			items: [
