--- a/app/views/qts/eligibility/old/summary-page-lops-sent-direct.html
+++ b/app/views/qts/eligibility/old/summary-page-lops-sent-direct.html
@@ -17,7 +17,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
 		<h2 class="govuk-heading-m">Preparing to apply</h2>
 		<p class="govuk-body">
-			If you decide to apply, you'll need to provide a range of evidence. We'll ask you to upload some scans,
+			If you decide to apply, you’ll need to provide a range of evidence. We’ll ask you to upload some scans,
 			photos, or original files.
 		</p>
 
@@ -241,8 +241,8 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
                     <p class="govuk-body">The document must confirm:</p>
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                        <li>that you've completed a teaching qualification/teacher training</li>
-                        <li>that you've successfully completed any period of professional experience comparable to an induction period (if required)</li>
+                        <li>that you’ve completed a teaching qualification/teacher training</li>
+                        <li>that you’ve successfully completed any period of professional experience comparable to an induction period (if required)</li>
                         <li>the age ranges and subjects you're qualified to teach</li>
                     </ul>
                     <p class="govuk-body">If we do not receive the document within 90 days of the date that you submit your application, we’ll need to close your application.</p>
