--- a/app/views/qts/eligibility/old/summary-page-nigeria.html
+++ b/app/views/qts/eligibility/old/summary-page-nigeria.html
@@ -23,7 +23,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
         <h2 class="govuk-heading-m">Preparing to apply</h2>
         <p class="govuk-body">
-            If you decide to apply, you'll need to provide a range of evidence. We'll ask you to upload some scans,
+            If you decide to apply, you’ll need to provide a range of evidence. We’ll ask you to upload some scans,
             photos, or original files.
         </p>
 
@@ -78,7 +78,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
                     <p class="govuk-body"><a
                             href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels">Check you hold a qualification that is equivalent or higher than a level 6</a>.</p>
 
-                    <p class="govuk-body">We'll need to understand how much of your qualification was focussed on developing practical teaching skills.</p>
+                    <p class="govuk-body">We’ll need to understand how much of your qualification was focussed on developing practical teaching skills.</p>
 
                     <p class="govuk-body">You’ll need to provide evidence of your teaching qualification:</p>
 
@@ -233,8 +233,8 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
                     
                     <p class="govuk-body">The document must confirm:</p>
                     <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                        <li>that you've completed a teaching qualification/teacher training</li>
-                        <li>that you've successfully completed any period of professional experience comparable to an induction period (if required)</li>
+                        <li>that you’ve completed a teaching qualification/teacher training</li>
+                        <li>that you’ve successfully completed any period of professional experience comparable to an induction period (if required)</li>
                         <li>the age ranges and subjects you're qualified to teach</li>
                     </ul>
                     <p class="govuk-body">If we do not receive the document within 90 days of the date that you submit your application, we’ll need to close your application.</p>
@@ -346,7 +346,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
 		<p class="govuk-body">If you'd like to help, please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjsMHqaiNP2cUUpmbeOkHRM96afrsj1TmTIEs-k4yit0JqBA/viewform"
                 rel="noreferrer noopener" target="_blank">complete this form</a>.</p>
-        <p class="govuk-body">If you match our search criteria, we'll invite you to take part in research.</p>
+        <p class="govuk-body">If you match our search criteria, we’ll invite you to take part in research.</p>
 
 	</div>
 </div>
