--- a/app/views/qualifications/start.html
+++ b/app/views/qualifications/start.html
@@ -58,7 +58,7 @@
     </section> -->
     <h1 class="govuk-heading-m">Before you start</h1>
 
-	<p>You’ll need to create a <b>{{ data.tsa }}</b> to access your teaching qualifications. You'll use the account to sign-in to this service and other DfE teaching services.</p>
+	<p>You’ll need to create a <b>{{ data.tsa }}</b> to access your teaching qualifications. You’ll use the account to sign-in to this service and other DfE teaching services.</p>
 
     {{ govukButton({
         text: "Start now",
