--- a/app/views/sign-in/_old/_code-type.html
+++ b/app/views/sign-in/_old/_code-type.html
@@ -5,7 +5,7 @@
     
   },
   hint: {
-    text: "You'll need a security code to access your account."
+    text: "You’ll need a security code to access your account."
   },
   items: [
     {
