--- a/app/views/sign-in/_resend-phone.html
+++ b/app/views/sign-in/_resend-phone.html
@@ -4,7 +4,7 @@
 
 {% block form %}
 
-<p class="govuk-!-margin-bottom-6">We'll send a text message to <strong>{{phonehtml | maskPhoneNumber}}</strong> which contains a security code. </p>
+<p class="govuk-!-margin-bottom-6">We’ll send a text message to <strong>{{phonehtml | maskPhoneNumber}}</strong> which contains a security code. </p>
 <p><a href='/auth/change-email-request'>I can't access this mobile number</a></p>
 
 {% endblock %}
