--- a/app/views/sign-in/finish.html
+++ b/app/views/sign-in/finish.html
@@ -1,5 +1,5 @@
 {% extends "layouts/forms-interrupt.html" %}
-{% set title %}You've signed in to your {{ serviceName }}{% endset %}
+{% set title %}You’ve signed in to your {{ serviceName }}{% endset %}
 {% set hideBackLink = true %}
 
 {% block form %}
