--- a/app/views/auth/_ga-account.html
+++ b/app/views/auth/_ga-account.html
@@ -13,7 +13,8 @@
   {{ govukButton({
     text: 'Create an account',
     classes: "app-button--inverse",
-    href: accountPath
+    href: accountPath,
+    href: '/auth/check-answers'
   }) }}
 
   <h1 class="govuk-heading-m">Already have an account?</h1>
