--- a/app/views/auth/_phone.html
+++ b/app/views/auth/_phone.html
@@ -1,7 +1,7 @@
 {%- if auth -%}
-  <p>Add your mobile number to make your account more secure. We'll send a security code to this number by text message. </p>
+  <p>Add your mobile number to make your account more secure. We’ll send a security code to this number by text message. </p>
 {%- else -%}
-  <p>We'll send a security code to this number by text message.</p>
+  <p>We’ll send a security code to this number by text message.</p>
 {%- endif -%}
 
   {{ govukInput({
