--- a/app/views/qts/eligibility/old/country-china.html
+++ b/app/views/qts/eligibility/old/country-china.html
@@ -24,7 +24,7 @@ In which state/territory are you currently recognised as a teacher? – {{ servi
 			}
 			},
 			hint: {
-			text: "This means you have all the qualifications needed to teach in a state school. You'll need to provide
+			text: "This means you have all the qualifications needed to teach in a state school. You’ll need to provide
 			evidence of this if you apply for QTS."
 			},
 			items: [
