--- a/app/views/qts/eligibility/old/eligible-bucket-6.html
+++ b/app/views/qts/eligibility/old/eligible-bucket-6.html
@@ -17,7 +17,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
 		<h2 class="govuk-heading-m">You can prepare to apply now</h2>
 		<p class="govuk-body">
-			If you decide to apply, you'll need to provide a range of evidence. We'll ask you
+			If you decide to apply, you’ll need to provide a range of evidence. We’ll ask you
 			to upload some scans, photos, or original files, so it's useful to get these now.
 		</p>
 
