--- a/app/views/qts/eligibility/old/summary-page-variant.html
+++ b/app/views/qts/eligibility/old/summary-page-variant.html
@@ -17,7 +17,7 @@ You might be eligible to apply for QTS – {{ serviceName }} prototype
 
 		<h2 class="govuk-heading-m">Preparing to apply</h2>
 		<p class="govuk-body">
-			If you decide to apply, you'll need to provide a range of evidence. We'll ask you to upload some scans,
+			If you decide to apply, you’ll need to provide a range of evidence. We’ll ask you to upload some scans,
 			photos, or original files.
 		</p>
 
