--- a/app/views/qts/eligibility/question-country.html
+++ b/app/views/qts/eligibility/question-country.html
@@ -9,7 +9,7 @@
 
 	{{ govukInput({
 		hint: {
-		text: "This means you have all the qualifications needed to teach in a state school. You'll need to provide evidence of this if you apply for QTS."
+		text: "This means you have all the qualifications needed to teach in a state school. You’ll need to provide evidence of this if you apply for QTS."
 		},
 		id: "country",
 		name: "country"
