--- a/app/views/sign-in/phone.html
+++ b/app/views/sign-in/phone.html
@@ -6,7 +6,7 @@
 {% block form %}
 
 <p>Enter the mobile number you used when creating your Teacher Services account.</p>
-<p>We'll send a security code to this number by text message.</p>
+<p>We’ll send a security code to this number by text message.</p>
 
   {{ govukInput({
     id: "[phone]",
